# airflow-playground

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
config/: airflow.cfg
config/dev/: airflow.env
config/prd/: airflow.env
dags/: example.py
test/: conftest.py  test_common.py  test_example.py
